--- a/player.html
+++ b/player.html
@@ -13,9 +13,9 @@
     </style>
 </head>
 <body>
-    <video controls crossorigin playsinline id="player">
+    <audio controls crossorigin playsinline id="player">
         <source src="https://chrt.fm/track/12431G/www.buzzsprout.com/2123669/15384360-lou-pearlman-boy-bands-big-lies-and-bigger-scams.mp3" type="audio/mp3" />
-    </video>
+    </audio>
     <script src="https://cdn.plyr.io/3.6.8/plyr.polyfilled.js"></script>
     <script>
         const player = new Plyr('#player');
